# proyecto-grafica

./: .gitignore  CMakeLists.txt  README.md
proyecto_1/: CMakeLists.txt
proyecto_1/src/: engine2D.cpp  engine2D.h  figures.cpp  figures.h  main  main.cpp  persistFigures.cpp  persistFigures.h  primitives.cpp  primitives.h  proyecto#1.cpp  proyecto#1.h  quadTree.cpp  quadTree.h
